add: api definition
