# src/models/Payments.ts
@@ -1,0 +1,215 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Paidy Payment API
+ * API for creating payments through Paidy.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { CreatePayment201ResponseCapturesInner } from './CreatePayment201ResponseCapturesInner';
+import {
+    CreatePayment201ResponseCapturesInnerFromJSON,
+    CreatePayment201ResponseCapturesInnerFromJSONTyped,
+    CreatePayment201ResponseCapturesInnerToJSON,
+    CreatePayment201ResponseCapturesInnerToJSONTyped,
+} from './CreatePayment201ResponseCapturesInner';
+import type { CreatePayment201ResponseOrder } from './CreatePayment201ResponseOrder';
+import {
+    CreatePayment201ResponseOrderFromJSON,
+    CreatePayment201ResponseOrderFromJSONTyped,
+    CreatePayment201ResponseOrderToJSON,
+    CreatePayment201ResponseOrderToJSONTyped,
+} from './CreatePayment201ResponseOrder';
+import type { CreatePayment201ResponseShippingAddress } from './CreatePayment201ResponseShippingAddress';
+import {
+    CreatePayment201ResponseShippingAddressFromJSON,
+    CreatePayment201ResponseShippingAddressFromJSONTyped,
+    CreatePayment201ResponseShippingAddressToJSON,
+    CreatePayment201ResponseShippingAddressToJSONTyped,
+} from './CreatePayment201ResponseShippingAddress';
+import type { CreatePayment201ResponseBuyer } from './CreatePayment201ResponseBuyer';
+import {
+    CreatePayment201ResponseBuyerFromJSON,
+    CreatePayment201ResponseBuyerFromJSONTyped,
+    CreatePayment201ResponseBuyerToJSON,
+    CreatePayment201ResponseBuyerToJSONTyped,
+} from './CreatePayment201ResponseBuyer';
+
+/**
+ * 決済データ
+ * @export
+ * @interface Payments
+ */
+export interface Payments {
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    id: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof Payments
+     */
+    createdAt?: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof Payments
+     */
+    expiresAt?: Date;
+    /**
+     * 
+     * @type {number}
+     * @memberof Payments
+     */
+    amount?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    currency?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    description?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    storeName?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof Payments
+     */
+    test?: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    status?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Payments
+     */
+    tier?: string;
+    /**
+     * 
+     * @type {CreatePayment201ResponseBuyer}
+     * @memberof Payments
+     */
+    buyer?: CreatePayment201ResponseBuyer;
+    /**
+     * 
+     * @type {CreatePayment201ResponseOrder}
+     * @memberof Payments
+     */
+    order?: CreatePayment201ResponseOrder;
+    /**
+     * 
+     * @type {CreatePayment201ResponseShippingAddress}
+     * @memberof Payments
+     */
+    shippingAddress?: CreatePayment201ResponseShippingAddress;
+    /**
+     * 
+     * @type {Array<CreatePayment201ResponseCapturesInner>}
+     * @memberof Payments
+     */
+    captures?: Array<CreatePayment201ResponseCapturesInner>;
+    /**
+     * 
+     * @type {Array<object>}
+     * @memberof Payments
+     */
+    refunds?: Array<object>;
+    /**
+     * 
+     * @type {object}
+     * @memberof Payments
+     */
+    metadata?: object;
+}
+
+/**
+ * Check if a given object implements the Payments interface.
+ */
+export function instanceOfPayments(value: object): value is Payments {
+    if (!('id' in value) || value['id'] === undefined) return false;
+    return true;
+}
+
+export function PaymentsFromJSON(json: any): Payments {
+    return PaymentsFromJSONTyped(json, false);
+}
+
+export function PaymentsFromJSONTyped(json: any, ignoreDiscriminator: boolean): Payments {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'expiresAt': json['expires_at'] == null ? undefined : (new Date(json['expires_at'])),
+        'amount': json['amount'] == null ? undefined : json['amount'],
+        'currency': json['currency'] == null ? undefined : json['currency'],
+        'description': json['description'] == null ? undefined : json['description'],
+        'storeName': json['store_name'] == null ? undefined : json['store_name'],
+        'test': json['test'] == null ? undefined : json['test'],
+        'status': json['status'] == null ? undefined : json['status'],
+        'tier': json['tier'] == null ? undefined : json['tier'],
+        'buyer': json['buyer'] == null ? undefined : CreatePayment201ResponseBuyerFromJSON(json['buyer']),
+        'order': json['order'] == null ? undefined : CreatePayment201ResponseOrderFromJSON(json['order']),
+        'shippingAddress': json['shipping_address'] == null ? undefined : CreatePayment201ResponseShippingAddressFromJSON(json['shipping_address']),
+        'captures': json['captures'] == null ? undefined : ((json['captures'] as Array<any>).map(CreatePayment201ResponseCapturesInnerFromJSON)),
+        'refunds': json['refunds'] == null ? undefined : json['refunds'],
+        'metadata': json['metadata'] == null ? undefined : json['metadata'],
+    };
+}
+
+  export function PaymentsToJSON(json: any): Payments {
+      return PaymentsToJSONTyped(json, false);
+  }
+
+  export function PaymentsToJSONTyped(value?: Payments | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+        'expires_at': value['expiresAt'] == null ? undefined : ((value['expiresAt']).toISOString()),
+        'amount': value['amount'],
+        'currency': value['currency'],
+        'description': value['description'],
+        'store_name': value['storeName'],
+        'test': value['test'],
+        'status': value['status'],
+        'tier': value['tier'],
+        'buyer': CreatePayment201ResponseBuyerToJSON(value['buyer']),
+        'order': CreatePayment201ResponseOrderToJSON(value['order']),
+        'shipping_address': CreatePayment201ResponseShippingAddressToJSON(value['shippingAddress']),
+        'captures': value['captures'] == null ? undefined : ((value['captures'] as Array<any>).map(CreatePayment201ResponseCapturesInnerToJSON)),
+        'refunds': value['refunds'],
+        'metadata': value['metadata'],
+    };
+}
+
