# src/models/UpdatePaymentRequest.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Paidy Payment API
+ * API for creating payments through Paidy.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UpdatePaymentRequest
+ */
+export interface UpdatePaymentRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdatePaymentRequest
+     */
+    orderRef?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdatePaymentRequest
+     */
+    description?: string;
+    /**
+     * 
+     * @type {object}
+     * @memberof UpdatePaymentRequest
+     */
+    metadata?: object;
+}
+
+/**
+ * Check if a given object implements the UpdatePaymentRequest interface.
+ */
+export function instanceOfUpdatePaymentRequest(value: object): value is UpdatePaymentRequest {
+    return true;
+}
+
+export function UpdatePaymentRequestFromJSON(json: any): UpdatePaymentRequest {
+    return UpdatePaymentRequestFromJSONTyped(json, false);
+}
+
+export function UpdatePaymentRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdatePaymentRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'orderRef': json['order_ref'] == null ? undefined : json['order_ref'],
+        'description': json['description'] == null ? undefined : json['description'],
+        'metadata': json['metadata'] == null ? undefined : json['metadata'],
+    };
+}
+
+  export function UpdatePaymentRequestToJSON(json: any): UpdatePaymentRequest {
+      return UpdatePaymentRequestToJSONTyped(json, false);
+  }
+
+  export function UpdatePaymentRequestToJSONTyped(value?: UpdatePaymentRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'order_ref': value['orderRef'],
+        'description': value['description'],
+        'metadata': value['metadata'],
+    };
+}
+
